added icerink and subway station

--- a/micropolis-java/strings/micropolisj/GuiStrings_de.properties
+++ b/micropolis-java/strings/micropolisj/GuiStrings_de.properties
@@ -1,5 +1,7 @@
 #de_DE
 #Sun Nov 10 12:27:07 CET 2013
+tool.NEWBUILDING.name=Neues Hus 
+tool.NEWBUILDING.tip=Neues Hus
 menu.game.load=Lade Stadt...
 budgetdlg.funding_level_hdr=H\u00F6he der Finanzierung
 menu.speed.PAUSED=Pausierend
