- changed package structure - new package engine.subway for SubwayNetork,... - fixed bulldozer bug for SubwayStation - SubwayDialog

--- a/micropolis-java/strings/micropolisj/GuiStrings_de.properties
+++ b/micropolis-java/strings/micropolisj/GuiStrings_de.properties
@@ -18,6 +18,7 @@ tool.INDUSTRIAL.name=Industriegebiet
 stats-last-year=(letztes Jahr)
 tool.INDUSTRIAL.tip=Industriegebiete
 menu.windows.graph=Diagramm
+menu.windows.subway=U-Bahn
 main.error_close=Schlie\u00DFen
 tool.BULLDOZER.name=Bagger
 welcome.quit=Beenden
@@ -36,6 +37,7 @@ menu.game.exit=Beenden
 menu.help.about=\u00DCber
 tool.NUCLEAR.tip=Baue Kernkraftwerk
 budgetdlg.road_fund=Ausgaben Verkehr
+budgetdlg.subway_fund=Ausgaben U-Bahn
 budgetdlg.reset=Zur\u00FCcksetzen auf Ursprungswerte
 menu.speed.NORMAL=Normal
 notification.pollution_lbl=Verschmutzung\:
@@ -161,3 +163,8 @@ onetwenty_years=120 Jahre
 city-score-change=J\u00E4hrliche Ausgaben\:
 tool.STADIUM.name=Stadion
 ten_years=10 Jahre
+
+subDlg.msg.maxConnectionExceeded=Maximale Anzahl an Verbindungen erreicht.
+subDlg.btn.createConnection=Verbinden
+subDlg.btn.removeConnection=Löschen
+subDlg.btn.ok=OK
